--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,12 @@
-body{
-)
--apple-system,
-// Chrome < 56 for macOS (San Francisco)
-BlinkMacSystemFont,
-// Windows
-"Segoe UI",
-// Android
-"Roboto",
-// Basic web fallback
-"Helvetica Neue", Arial, sans-serif,
-// Emoji fonts
-"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
+h1, h3{
+    display: inline;
 }
 
-
+input, button{
+    border:none;
+    background: none;
+    color: inherit;
+    outline: inherit;
+    outline-color: inherit;
+}
