Project file clean

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,12 @@
-
-h1, h3{
-    display: inline;
+body{
+    font-size: 3.5vw;
 }
+
+/* h1, h3{
+    display: inline;
+} */
+
+
 
 
 
@@ -16,6 +21,7 @@ input, button{
 #teamBlock{
     font-size: 30px;
     font-size: 3.5vw;
+
 }
 
 #overlay {
@@ -40,4 +46,15 @@ input, button{
     color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
+}
+
+
+#team1{
+ color: red;
+}
+
+
+#title{
+    text-align: center;
+    font-style: oblique;
 }
