--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 body{
+    height: 100%;
     font-size: 3.5vw;
+    background-image: url("https://images.unsplash.com/photo-1547992454-782f6b4c986c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
 }
 
 
